--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -177,7 +177,7 @@
     bottom: 0;
     width: 100%;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-evenly; /* or space-between */
     background: var(--secondary-color);
     padding: 10px 0;
     box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
@@ -842,10 +842,6 @@
           <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
           <span>Market</span>
       </a>
-      <a href="#" id="rewardsButton" class="footer-icon" aria-label="Rewards">
-          <img src="/BeeMazing-Y1/mobile/1-Home/RewardsBtn.png" alt="Rewards" />
-          <span>Rewards</span>
-      </a>
   </div>
     
     
@@ -891,7 +887,6 @@ if (userName && adminEmail) {
     const homeButton = document.getElementById("homeButton");
     const profileButton = document.getElementById("profileButton");
     const marketButton = document.getElementById("marketButton");
-    const rewardsButton = document.getElementById("rewardsButton");
 
     // Show Home button for admins
     if (isUserAdmin && homeButton) {
@@ -902,7 +897,7 @@ if (userName && adminEmail) {
     // Set other button links
     profileButton.href = `${basePath}/users.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
     marketButton.href = `${basePath}/usermarket.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
-    rewardsButton.href = `${basePath}/userrewards.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
+   
 
     // Set active state
     document.querySelectorAll('.footer a').forEach(link => {
