--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -239,6 +239,59 @@
                 left: 6px;
             }
         }
+
+
+
+
+
+
+               .footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    display: flex;
+    justify-content: space-evenly; /* or space-between */
+    background: var(--secondary-color);
+    padding: 10px 0;
+    box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
+    z-index: 100;
+    height: var(--footer-height);
+}
+
+.footer a {
+    text-decoration: none;
+    color: var(--text-color);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    transition: transform 0.3s ease;
+}
+
+.footer a:hover {
+    transform: scale(1.1);
+}
+
+.footer-icon img {
+    width: 40px;
+    height: 40px;
+    filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
+}
+
+.footer a.active img {
+    filter: invert(77%) sepia(88%) saturate(900%) hue-rotate(0deg)
+        brightness(100%) contrast(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2)) !important;
+}
+
+.footer-icon span {
+    font-size: 12px;
+    margin-top: 5px;
+    font-weight: 600;
+}
+
+.footer a.active span {
+    color: var(--primary-color);
+}
+        
     </style>
 </head>
 <body>
@@ -274,7 +327,7 @@
         </a>
         <a href="#" id="marketButton" class="footer-icon active" aria-label="Rewards">
             <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" class="w-10 h-10 filter drop-shadow-md" alt="Rewards" />
-            <span class="text-xs font-semibold mt-1 text-[var(--primary-color)]">Rewards</span>
+            <span class="text-xs font-semibold mt-1 text-[var(--primary-color)]">Market</span>
         </a>
     </div>
 
