--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -245,7 +245,7 @@
 
 
 
-               .footer {
+        .footer {
     position: fixed;
     bottom: 0;
     width: 100%;
@@ -257,7 +257,6 @@
     z-index: 100;
     height: var(--footer-height);
 }
-
 .footer a {
     text-decoration: none;
     color: var(--text-color);
@@ -266,30 +265,31 @@
     align-items: center;
     transition: transform 0.3s ease;
 }
-
 .footer a:hover {
     transform: scale(1.1);
 }
-
 .footer-icon img {
     width: 40px;
     height: 40px;
     filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
 }
-
 .footer a.active img {
     filter: invert(77%) sepia(88%) saturate(900%) hue-rotate(0deg)
         brightness(100%) contrast(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2)) !important;
 }
-
 .footer-icon span {
     font-size: 12px;
     margin-top: 5px;
     font-weight: 600;
 }
-
 .footer a.active span {
     color: var(--primary-color);
+}
+@media (max-width: 600px) {
+    .footer-icon img {
+        width: 35px;
+        height: 35px;
+    }
 }
         
     </style>
@@ -316,20 +316,20 @@
         </div>
     </div>
 
-    <div class="footer bg-[var(--secondary-color)] flex justify-around p-2 shadow-md fixed bottom-0 w-full z-10 h-[var(--footer-height)]">
-        <a href="#" id="homeButton" class="footer-icon hidden" aria-label="Home">
-            <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" class="w-10 h-10 filter drop-shadow-md" alt="Home" />
-            <span class="text-xs font-semibold mt-1">Home</span>
-        </a>
-        <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
-            <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" class="w-10 h-10 filter drop-shadow-md" alt="Profile" />
-            <span class="text-xs font-semibold mt-1">Profile</span>
-        </a>
-        <a href="#" id="marketButton" class="footer-icon active" aria-label="Rewards">
-            <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" class="w-10 h-10 filter drop-shadow-md" alt="Rewards" />
-            <span class="text-xs font-semibold mt-1 text-[var(--primary-color)]">Market</span>
-        </a>
-    </div>
+    <div class="footer">
+      <a href="#" id="homeButton" class="footer-icon" aria-label="Home" style="display: none;">
+          <img src="/BeeMazing-Y1/mobile/1-Home/HomeBtn.png" alt="Home" />
+          <span>Home</span>
+      </a>
+      <a href="#" id="profileButton" class="footer-icon" aria-label="Profile">
+          <img src="/BeeMazing-Y1/mobile/1-Home/ProfileBtn.png" alt="Profile" />
+          <span>Profile</span>
+      </a>
+      <a href="#" id="marketButton" class="footer-icon active" aria-label="Market">
+          <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
+          <span>Market</span>
+      </a>
+  </div>
 
     <!-- The Key Popup -->
     <div id="keyPopup" class="modal hidden">
@@ -369,19 +369,14 @@
           const isUserAdmin = permissions[userName] === "Admin";
   
           // Set footer button links
-// Set footer button links
 const homeButton = document.getElementById("homeButton");
 const profileButton = document.getElementById("profileButton");
 const marketButton = document.getElementById("marketButton");
 
-// Show Home button for admins, hide for non-admins
-if (homeButton) {
-    if (isUserAdmin) {
-        homeButton.style.display = "flex";
-        homeButton.href = `${basePath}/userAdmin.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
-    } else {
-        homeButton.style.display = "none";
-    }
+// Show Home button for admins
+if (isUserAdmin && homeButton) {
+    homeButton.style.display = "flex";
+    homeButton.href = `${basePath}/userAdmin.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
 }
 
 // Set other button links
