Market/Rewards/History combining #17

--- a/mobile/2-UserProfiles/usermarket.html
+++ b/mobile/2-UserProfiles/usermarket.html
@@ -250,7 +250,7 @@
     bottom: 0;
     width: 100%;
     display: flex;
-    justify-content: space-evenly; /* or space-between */
+    justify-content: space-around;
     background: var(--secondary-color);
     padding: 10px 0;
     box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
