--- a/mobile/2-UserProfiles/users.html
+++ b/mobile/2-UserProfiles/users.html
@@ -177,14 +177,13 @@
     bottom: 0;
     width: 100%;
     display: flex;
-    justify-content: space-evenly; /* or space-between */
+    justify-content: space-around;
     background: var(--secondary-color);
     padding: 10px 0;
     box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.2);
     z-index: 100;
     height: var(--footer-height);
 }
-
 .footer a {
     text-decoration: none;
     color: var(--text-color);
@@ -193,32 +192,32 @@
     align-items: center;
     transition: transform 0.3s ease;
 }
-
 .footer a:hover {
     transform: scale(1.1);
 }
-
 .footer-icon img {
     width: 40px;
     height: 40px;
     filter: invert(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2));
 }
-
 .footer a.active img {
     filter: invert(77%) sepia(88%) saturate(900%) hue-rotate(0deg)
         brightness(100%) contrast(100%) drop-shadow(0 2px 4px rgba(0, 0, 0, 0.2)) !important;
 }
-
 .footer-icon span {
     font-size: 12px;
     margin-top: 5px;
     font-weight: 600;
 }
-
 .footer a.active span {
     color: var(--primary-color);
 }
-
+@media (max-width: 600px) {
+    .footer-icon img {
+        width: 35px;
+        height: 35px;
+    }
+}
 
 
 
