--- a/mobile/2-UserProfiles/userAdmin.html
+++ b/mobile/2-UserProfiles/userAdmin.html
@@ -239,6 +239,112 @@
         height: 35px;
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+/* Menu Toggle Button */
+.menu-btn {
+    background: none;
+    border: none;
+    color: var(--text-color);
+    font-size: 24px;
+    cursor: pointer;
+    padding: 5px 10px;
+    transition: color 0.3s ease;
+}
+.menu-btn:hover {
+    color: var(--primary-color);
+}
+
+/* Side Menu */
+.side-menu {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100%;
+    background: var(--secondary-color);
+    box-shadow: 2px 0 5px rgba(0, 0, 0, 0.3);
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in-out;
+    z-index: 200;
+    display: flex;
+    flex-direction: column;
+}
+.side-menu.open {
+    transform: translateX(0);
+}
+.menu-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 15px;
+    background: var(--light-bg);
+    border-bottom: 1px solid #444754;
+}
+.menu-header h2 {
+    font-size: 18px;
+    color: var(--text-color);
+}
+.close-btn {
+    background: none;
+    border: none;
+    color: var(--text-color);
+    font-size: 24px;
+    cursor: pointer;
+    padding: 5px;
+}
+.close-btn:hover {
+    color: var(--primary-color);
+}
+.menu-items {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    flex-grow: 1;
+}
+.menu-items li {
+    border-bottom: 1px solid #444754;
+}
+.menu-link {
+    display: block;
+    padding: 15px 20px;
+    color: var(--text-color);
+    text-decoration: none;
+    font-size: 16px;
+    transition: background 0.3s ease, color 0.3s ease;
+}
+.menu-link:hover {
+    background: var(--light-bg);
+    color: var(--primary-color);
+}
+
+/* Ensure content shifts when menu is open */
+body.menu-open {
+    overflow: hidden;
+}
+
+/* Responsive adjustments */
+@media (max-width: 600px) {
+    .side-menu {
+        width: 200px;
+    }
+    .menu-link {
+        font-size: 14px;
+        padding: 12px 15px;
+    }
+    .menu-header h2 {
+        font-size: 16px;
+    }
+}
   </style>
 
 
@@ -247,19 +353,31 @@
 
 </head>
 <body>
-
-  <div class="date-header">
-    <div class="month-nav">
-      <button id="prevMonth">&lt;</button>
-      <span id="monthLabel">Month</span>
-      <button id="nextMonth">&gt;</button>
+    <nav id="sideMenu" class="side-menu">
+        <div class="menu-header">
+            <h2>Admin Menu</h2>
+            <button id="closeMenu" class="close-btn" aria-label="Close Menu">×</button>
+        </div>
+        <ul class="menu-items">
+            <li><a href="#" id="taskSettingsLink" class="menu-link">Task Settings</a></li>
+            <li><a href="#" id="marketDashLink" class="menu-link">Market Dash</a></li>
+            <li><a href="#" id="userManagementLink" class="menu-link">User Management</a></li>
+            <li><a href="#" id="logoutLink" class="menu-link">Logout</a></li>
+        </ul>
+    </nav>
+    <div class="date-header">
+        <div class="month-nav">
+            <button id="menuToggle" class="menu-btn" aria-label="Toggle Menu">☰</button>
+            <button id="prevMonth"><</button>
+            <span id="monthLabel">Month</span>
+            <button id="nextMonth">></button>
+        </div>
+        <div class="day-scroll-wrapper">
+            <button class="scroll-btn" id="scrollLeft"><</button>
+            <div class="day-scroll" id="dayScrollContainer"></div>
+            <button class="scroll-btn" id="scrollRight">></button>
+        </div>
     </div>
-    <div class="day-scroll-wrapper">
-      <button class="scroll-btn" id="scrollLeft">&lt;</button>
-      <div class="day-scroll" id="dayScrollContainer"></div>
-      <button class="scroll-btn" id="scrollRight">&gt;</button>
-    </div>
-  </div>
 
   <div id="taskContainer">Loading tasks...</div>
 
@@ -313,6 +431,39 @@ document.querySelectorAll('.footer a').forEach(link => {
         link.classList.remove('active');
     }
 });
+
+
+// Side Menu Toggle
+const menuToggle = document.getElementById('menuToggle');
+const sideMenu = document.getElementById('sideMenu');
+const closeMenu = document.getElementById('closeMenu');
+
+menuToggle.addEventListener('click', () => {
+    sideMenu.classList.add('open');
+    document.body.classList.add('menu-open');
+});
+
+closeMenu.addEventListener('click', () => {
+    sideMenu.classList.remove('open');
+    document.body.classList.remove('menu-open');
+});
+
+// Set side menu links
+const taskSettingsLink = document.getElementById('taskSettingsLink');
+const marketDashLink = document.getElementById('marketDashLink');
+const userManagementLink = document.getElementById('userManagementLink');
+const logoutLink = document.getElementById('logoutLink');
+
+if (adminEmail && userName) {
+    taskSettingsLink.href = `${basePath}/tasks.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
+    marketDashLink.href = `${basePath}/market.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
+    userManagementLink.href = `${basePath}/home.html?admin=${encodeURIComponent(adminEmail)}&user=${encodeURIComponent(userName)}`;
+    logoutLink.href = `${basePath}/login.html`;
+}
+
+
+
+
 
 
 let selectedDate = new Date().toLocaleDateString("sv-SE");
