Market/Rewards/History combining #24

--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -421,11 +421,11 @@ body {
         </a>
         <a href="/BeeMazing-Y1/mobile/3-Tasks/tasks.html" class="footer-icon" aria-label="Tasks">
             <img src="/BeeMazing-Y1/mobile/1-Home/TasksBtn.png" alt="Tasks" />
-            <span>Tasks</span>
+            <span>Task Settings</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/4-Market/market.html" class="footer-icon" aria-label="Market">
             <img src="/BeeMazing-Y1/mobile/1-Home/MarketBtn.png" alt="Market" />
-            <span>Market</span>
+            <span>Market Dash</span>
         </a>
         <a href="/BeeMazing-Y1/mobile/5-Stats/stats.html" class="footer-icon" aria-label="Stats">
             <img src="/BeeMazing-Y1/mobile/1-Home/StatsBtn.png" alt="Stats" />
